--- a/examples/Makefile
+++ b/examples/Makefile
@@ -3,7 +3,7 @@
 #	wiringPi - Wiring Compatable library for the Raspberry Pi
 #	https://projects.drogon.net/wiring-pi
 #
-#	Copyright (c) 2012 Gordon Henderson
+#	Copyright (c) 2012-2015 Gordon Henderson
 #################################################################################
 # This file is part of wiringPi:
 #	Wiring Compatable library for the Raspberry Pi
@@ -22,6 +22,9 @@
 #    along with wiringPi.  If not, see <http://www.gnu.org/licenses/>.
 #################################################################################
 
+ifneq ($V,1)
+Q ?= @
+endif
 
 #DEBUG	= -g -O0
 DEBUG	= -O3
@@ -44,123 +47,123 @@ SRC	=	blink.c blink8.c blink12.c					\
 		softPwm.c softTone.c 						\
 		delayTest.c serialRead.c serialTest.c okLed.c ds1302.c		\
 		lowPower.c							\
-		rht03.c piglow.c
+		max31855.c							\
+		rht03.c
 
 OBJ	=	$(SRC:.c=.o)
 
 BINS	=	$(SRC:.c=)
 
 all:	
-	@cat README.TXT
-	@echo "    $(BINS)" | fmt
-	@echo ""
+	$Q cat README.TXT
+	$Q echo "    $(BINS)" | fmt
+	$Q echo ""
 
 really-all:	$(BINS)
 
 blink:	blink.o
-	@echo [link]
-	@$(CC) -o $@ blink.o $(LDFLAGS) $(LDLIBS)
+	$Q echo [link]
+	$Q $(CC) -o $@ blink.o $(LDFLAGS) $(LDLIBS)
 
 blink8:	blink8.o
-	@echo [link]
-	@$(CC) -o $@ blink8.o $(LDFLAGS) $(LDLIBS)
+	$Q echo [link]
+	$Q $(CC) -o $@ blink8.o $(LDFLAGS) $(LDLIBS)
 
 blink12drcs:	blink12drcs.o
-	@echo [link]
-	@$(CC) -o $@ blink12drcs.o $(LDFLAGS) $(LDLIBS)
+	$Q echo [link]
+	$Q $(CC) -o $@ blink12drcs.o $(LDFLAGS) $(LDLIBS)
 
 blink12:	blink12.o
-	@echo [link]
-	@$(CC) -o $@ blink12.o $(LDFLAGS) $(LDLIBS)
+	$Q echo [link]
+	$Q $(CC) -o $@ blink12.o $(LDFLAGS) $(LDLIBS)
 
 speed:	speed.o
-	@echo [link]
-	@$(CC) -o $@ speed.o $(LDFLAGS) $(LDLIBS)
+	$Q echo [link]
+	$Q $(CC) -o $@ speed.o $(LDFLAGS) $(LDLIBS)
 
 lcd:	lcd.o
-	@echo [link]
-	@$(CC) -o $@ lcd.o $(LDFLAGS) $(LDLIBS)
+	$Q echo [link]
+	$Q $(CC) -o $@ lcd.o $(LDFLAGS) $(LDLIBS)
 
 lcd-adafruit:	lcd-adafruit.o
-	@echo [link]
-	@$(CC) -o $@ lcd-adafruit.o $(LDFLAGS) $(LDLIBS)
+	$Q echo [link]
+	$Q $(CC) -o $@ lcd-adafruit.o $(LDFLAGS) $(LDLIBS)
 
 clock:	clock.o
-	@echo [link]
-	@$(CC) -o $@ clock.o $(LDFLAGS) $(LDLIBS)
+	$Q echo [link]
+	$Q $(CC) -o $@ clock.o $(LDFLAGS) $(LDLIBS)
 
 wfi:	wfi.o
-	@echo [link]
-	@$(CC) -o $@ wfi.o $(LDFLAGS) $(LDLIBS)
+	$Q echo [link]
+	$Q $(CC) -o $@ wfi.o $(LDFLAGS) $(LDLIBS)
 
 isr:	isr.o
-	@echo [link]
-	@$(CC) -o $@ isr.o $(LDFLAGS) $(LDLIBS)
+	$Q echo [link]
+	$Q $(CC) -o $@ isr.o $(LDFLAGS) $(LDLIBS)
 
 isr-osc:	isr-osc.o
-	@echo [link]
-	@$(CC) -o $@ isr-osc.o $(LDFLAGS) $(LDLIBS)
+	$Q echo [link]
+	$Q $(CC) -o $@ isr-osc.o $(LDFLAGS) $(LDLIBS)
 
 nes:	nes.o
-	@echo [link]
-	@$(CC) -o $@ nes.o $(LDFLAGS) $(LDLIBS) 
+	$Q echo [link]
+	$Q $(CC) -o $@ nes.o $(LDFLAGS) $(LDLIBS) 
 
 rht03:	rht03.o
-	@echo [link]
-	@$(CC) -o $@ rht03.o $(LDFLAGS) $(LDLIBS) 
+	$Q echo [link]
+	$Q $(CC) -o $@ rht03.o $(LDFLAGS) $(LDLIBS) 
 
 pwm:	pwm.o
-	@echo [link]
-	@$(CC) -o $@ pwm.o $(LDFLAGS) $(LDLIBS)
+	$Q echo [link]
+	$Q $(CC) -o $@ pwm.o $(LDFLAGS) $(LDLIBS)
 
 softPwm:	softPwm.o
-	@echo [link]
-	@$(CC) -o $@ softPwm.o $(LDFLAGS) $(LDLIBS)
+	$Q echo [link]
+	$Q $(CC) -o $@ softPwm.o $(LDFLAGS) $(LDLIBS)
 
 softTone:	softTone.o
-	@echo [link]
-	@$(CC) -o $@ softTone.o $(LDFLAGS) $(LDLIBS)
+	$Q echo [link]
+	$Q $(CC) -o $@ softTone.o $(LDFLAGS) $(LDLIBS)
 
 delayTest:	delayTest.o
-	@echo [link]
-	@$(CC) -o $@ delayTest.o $(LDFLAGS) $(LDLIBS)
+	$Q echo [link]
+	$Q $(CC) -o $@ delayTest.o $(LDFLAGS) $(LDLIBS)
 
 serialRead:	serialRead.o
-	@echo [link]
-	@$(CC) -o $@ serialRead.o $(LDFLAGS) $(LDLIBS)
+	$Q echo [link]
+	$Q $(CC) -o $@ serialRead.o $(LDFLAGS) $(LDLIBS)
 
 serialTest:	serialTest.o
-	@echo [link]
-	@$(CC) -o $@ serialTest.o $(LDFLAGS) $(LDLIBS)
+	$Q echo [link]
+	$Q $(CC) -o $@ serialTest.o $(LDFLAGS) $(LDLIBS)
 
 okLed:	okLed.o
-	@echo [link]
-	@$(CC) -o $@ okLed.o $(LDFLAGS) $(LDLIBS)
+	$Q echo [link]
+	$Q $(CC) -o $@ okLed.o $(LDFLAGS) $(LDLIBS)
 
 tone:	tone.o
-	@echo [link]
-	@$(CC) -o $@ tone.o $(LDFLAGS) $(LDLIBS)
+	$Q echo [link]
+	$Q $(CC) -o $@ tone.o $(LDFLAGS) $(LDLIBS)
 
 ds1302:	ds1302.o
-	@echo [link]
-	@$(CC) -o $@ ds1302.o $(LDFLAGS) $(LDLIBS)
+	$Q echo [link]
+	$Q $(CC) -o $@ ds1302.o $(LDFLAGS) $(LDLIBS)
 
-piglow:	piglow.o
-	@echo [link]
-	@$(CC) -o $@ piglow.o $(LDFLAGS) $(LDLIBS)
-
+max31855:	max31855.o
+	$Q echo [link]
+	$Q $(CC) -o $@ max31855.o $(LDFLAGS) $(LDLIBS)
 
 .c.o:
-	@echo [CC] $<
-	@$(CC) -c $(CFLAGS) $< -o $@
+	$Q echo [CC] $<
+	$Q $(CC) -c $(CFLAGS) $< -o $@
 
 clean:
-	@echo "[Clean]"
-	@rm -f $(OBJ) *~ core tags $(BINS)
+	$Q echo "[Clean]"
+	$Q rm -f $(OBJ) *~ core tags $(BINS)
 
 tags:	$(SRC)
-	@echo [ctags]
-	@ctags $(SRC)
+	$Q echo [ctags]
+	$Q ctags $(SRC)
 
 depend:
 	makedepend -Y $(SRC)
